--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,8 @@
   },
   "require": {
     "php": ">=5.5.9",
-    "symfony/symfony": "^4.4",
+    "symfony/symfony": "^5.4",
     "doctrine/orm": "^2.20",
-    "doctrine/doctrine-cache-bundle": "^1.2",
     "symfony/monolog-bundle": "^3.8",
     "symfony/polyfill-apcu": "^1.0",
     "doctrine/doctrine-bundle": "^2.0",
@@ -65,6 +64,11 @@
     "symfony-assets-install": "relative",
     "incenteev-parameters": {
       "file": "app/config/parameters.yml"
+    },
+    "symfony": {
+      "dont-require": [
+        "symfony/messenger"
+      ]
     }
   },
   "config": {
