refactor(symfony): migrate from Symfony 5.4 to Symfony 6.4 but still issues to fix

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,8 +1,8 @@
 framework:
   secret: "%secret%"
-  # router:
-  #   resource: "%kernel.project_dir%/config/routes.yaml"
-  #   strict_requirements: ~
+  router:
+    utf8: true
+    strict_requirements: ~
   form: ~
   csrf_protection: ~
   validation: { enable_annotations: true }
