refactor(symfony): migrate from Symfony 6.4 to Symfony 7.2

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -2,10 +2,11 @@ framework:
   secret: "%secret%"
   router:
     utf8: true
-    strict_requirements: ~
+    strict_requirements: null
   form: ~
   csrf_protection: ~
-  validation: { enable_annotations: true }
+  validation:
+    enable_attributes: true
   default_locale: "%locale%"
   trusted_hosts: ~
   session:
