--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,26 +1,29 @@
 security:
   password_hashers:
-    App\Entity\User:
-      algorithm: bcrypt
+    Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
 
   providers:
-    in_memory:
-      memory:
-        users:
-          admin:
-            password: "admin"
-            roles: "ROLE_ADMIN"
+    app_user_provider:
+      entity:
+        class: App\Entity\User
+        property: email # ou 'username' selon ton cas
 
   firewalls:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
-    # main:
-    #   anonymous: true
-    #   form_login:
-    #     login_path: login
-    #     check_path: login
-    #   logout:
-    #     path: logout
-    #   guard:
-    #     authenticator: App\Security\LoginAuthenticator
+
+    main:
+      lazy: true
+      provider: app_user_provider
+      form_login:
+        login_path: login
+        check_path: login_check
+      logout:
+        path: logout
+        target: /
+
+  access_control:
+    - { path: ^/login, roles: PUBLIC_ACCESS }
+    - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/, roles: ROLE_USER }
