--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,9 @@
 security:
   password_hashers:
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
+  role_hierarchy:
+    ROLE_ADMIN: [ROLE_USER]
+  access_denied_url: homepage
 
   providers:
     app_user_provider:
