--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,10 @@
     "symfony/stopwatch": "^7.2",
     "symfony/web-profiler-bundle": "^7.2",
     "symfony/debug-bundle": "^7.2",
-    "phpunit/phpunit": "^12.1"
+    "phpunit/phpunit": "^12.1",
+    "symfony/browser-kit": "^7.3",
+    "symfony/dom-crawler": "^7.3",
+    "symfony/css-selector": "^7.3"
   },
   "scripts": {
     "symfony-scripts": [
